--- a/Tarea 1.ipynb
+++ b/Tarea 1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "9d12a852",
    "metadata": {},
    "outputs": [],
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "2a4287c4",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El resultado del centroide promedio (center average) es: -0.023271056693257724\n"
+      "El resultado del centro promedio (center average) es: -0.023271056693257724\n"
      ]
     },
     {
@@ -642,6 +642,10 @@
     "\n",
     "# Encontrar el centroide de cada conjunto difuso\n",
     "\n",
+    "centroides = [np.sum(x1 * y1) / np.sum(y1), np.sum(x2 * y2) / np.sum(y2), np.sum(x3 * y3) / np.sum(y3), np.sum(x4 * y4) / np.sum(y4)]\n",
+    "# Calcular el centro promedio\n",
+    "center_average = np.sum(((centroides[0] * h1) + (centroides[1] * h2) + (centroides[2] * h3) + (centroides[3] * h4)) / (h1+h2+h3+h4))\n",
+    "\n",
     "# Calcular el centroide promedio\n",
     "center_average = ((-8*np.pi/180)*(0.5-((0.25)**2/2))+(8*np.pi/180)*(0.25-((0.25)**2/2)))/(h1+h2+h3+h4)\n",
     "# Dibujar los fuzzy sets implicados con las líneas de centroide\n",
@@ -657,8 +661,7 @@
     "plt.grid(True)\n",
     "\n",
     "# Mostrar el resultado del centroide promedio\n",
-    "print('El resultado del centroide promedio (center average) es:', center_average)\n",
-    "\n",
+    "print('Centro promedio es:', center_average)\n",
     "\n"
    ]
   },
