--- a/MPC_CasADiEstudiantes.ipynb
+++ b/MPC_CasADiEstudiantes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "id": "VbN6dDdV7i5K"
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +115,18 @@
      "output_type": "stream",
      "text": [
       "{'adj_p': MX(0x0), 'adj_u': MX(0x0), 'adj_x0': MX(0x0), 'adj_z0': MX(0x0), 'qf': MX(0x1), 'xf': MX(@1=0x0, intg(x, 0x1, u, 0x1, @1, @1, @1){0}), 'zf': MX(0x1)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CasADi - 2024-02-19 17:30:38 WARNING(\"The options 't0', 'tf', 'grid' and 'output_t0' have been deprecated.\n",
+      "The same functionality is provided by providing additional input arguments to the 'integrator' function, in particular:\n",
+      " * Call integrator(..., t0, tf, options) for a single output time, or\n",
+      " * Call integrator(..., t0, grid, options) for multiple grid points.\n",
+      "The legacy 'output_t0' option can be emulated by including or excluding 't0' in 'grid'.\n",
+      "Backwards compatibility is provided in this release only.\") [.../casadi/core/integrator.cpp:521]\n"
      ]
     }
    ],
@@ -143,81 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {
     "id": "MBz2t6QfCOSy"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "******************************************************************************\n",
-      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
-      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
-      "         For more information visit https://github.com/coin-or/Ipopt\n",
-      "******************************************************************************\n",
-      "\n",
-      "This is Ipopt version 3.14.11, running with linear solver MUMPS 5.4.1.\n",
-      "\n",
-      "Number of nonzeros in equality constraint Jacobian...:        2\n",
-      "Number of nonzeros in inequality constraint Jacobian.:        0\n",
-      "Number of nonzeros in Lagrangian Hessian.............:        3\n",
-      "\n",
-      "Total number of variables............................:        2\n",
-      "                     variables with only lower bounds:        0\n",
-      "                variables with lower and upper bounds:        0\n",
-      "                     variables with only upper bounds:        0\n",
-      "Total number of equality constraints.................:        1\n",
-      "Total number of inequality constraints...............:        0\n",
-      "        inequality constraints with only lower bounds:        0\n",
-      "   inequality constraints with lower and upper bounds:        0\n",
-      "        inequality constraints with only upper bounds:        0\n",
-      "\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "   0 -1.0000000e+00 2.00e+00 2.00e+00  -1.0 0.00e+00    -  0.00e+00 0.00e+00   0\n",
-      "   1 -1.0101010e+00 2.00e+00 7.18e+06  -1.0 1.01e-02  -2.0 1.00e+00 1.00e+00h  1\n",
-      "   2  2.3587891e+02 4.24e-01 1.50e+12  -1.0 9.90e+01   9.8 1.00e+00 1.56e-02h  7\n",
-      "   3  1.9599541e+02 1.86e-02 2.87e+10  -1.0 1.36e-01  12.1 1.00e+00 1.00e+00f  1\n",
-      "   4  1.9417576e+02 4.26e-05 1.31e+08  -1.0 6.53e-03    -  1.00e+00 1.00e+00f  1\n",
-      "   5  1.9417157e+02 2.27e-10 1.40e+03  -1.0 1.51e-05    -  1.00e+00 1.00e+00h  1\n",
-      "   6  1.9417157e+02 4.44e-16 7.95e-08  -1.0 8.03e-11    -  1.00e+00 1.00e+00h  1\n",
-      "   7  1.9417157e+02 4.44e-16 0.00e+00  -8.6 1.57e-16    -  1.00e+00 1.00e+00   0\n",
-      "\n",
-      "Number of Iterations....: 7\n",
-      "\n",
-      "                                   (scaled)                 (unscaled)\n",
-      "Objective...............:   1.9417157287525387e+02    1.9417157287525387e+02\n",
-      "Dual infeasibility......:   0.0000000000000000e+00    0.0000000000000000e+00\n",
-      "Constraint violation....:   4.4408920985006262e-16    4.4408920985006262e-16\n",
-      "Variable bound violation:   0.0000000000000000e+00    0.0000000000000000e+00\n",
-      "Complementarity.........:   0.0000000000000000e+00    0.0000000000000000e+00\n",
-      "Overall NLP error.......:   4.4408920985006262e-16    4.4408920985006262e-16\n",
-      "\n",
-      "\n",
-      "Number of objective function evaluations             = 14\n",
-      "Number of objective gradient evaluations             = 8\n",
-      "Number of equality constraint evaluations            = 15\n",
-      "Number of inequality constraint evaluations          = 0\n",
-      "Number of equality constraint Jacobian evaluations   = 8\n",
-      "Number of inequality constraint Jacobian evaluations = 0\n",
-      "Number of Lagrangian Hessian evaluations             = 7\n",
-      "Total seconds in IPOPT                               = 0.022\n",
-      "\n",
-      "EXIT: Optimal Solution Found.\n",
-      "      solver  :   t_proc      (avg)   t_wall      (avg)    n_eval\n",
-      "       nlp_f  |  39.00us (  2.79us)  32.28us (  2.31us)        14\n",
-      "       nlp_g  |  69.00us (  4.60us)  48.65us (  3.24us)        15\n",
-      "  nlp_grad_f  | 221.00us ( 24.56us) 213.52us ( 23.72us)         9\n",
-      "  nlp_hess_l  |  68.00us (  9.71us)  62.25us (  8.89us)         7\n",
-      "   nlp_jac_g  |  46.00us (  5.11us)  43.12us (  4.79us)         9\n",
-      "       total  |  20.91ms ( 20.91ms)  24.91ms ( 24.91ms)         1\n",
-      "x1 -1.4142135623730951\n",
-      "x2 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Crear la varible opti para definir el problema\n",
     "opti = Opti()\n",
