--- a/Tarea2.ipynb
+++ b/Tarea2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "362e7018",
+   "id": "71e8d4f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "243a2e38",
+   "id": "3c04fc60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2e6a36e",
+   "id": "1ca4b130",
    "metadata": {},
    "source": [
     "Punto 1. "
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "42f97301",
+   "id": "ef310d1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "135c975b",
+   "id": "e20e3714",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "7461f11b",
+   "id": "888a8742",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "4a4e97de",
+   "id": "e22b7589",
    "metadata": {},
    "outputs": [
     {
@@ -339,19 +339,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf773d6b",
+   "id": "2ae2009c",
    "metadata": {},
    "source": [
-    "Punto 2. "
+    "Punto 3. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a98cb84b",
+   "execution_count": 120,
+   "id": "ca427ca6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[120], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m a3 \u001b[38;5;241m=\u001b[39m a4 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m9.127\u001b[39m\n\u001b[1;32m      7\u001b[0m g \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m9.8\u001b[39m\n\u001b[0;32m----> 9\u001b[0m dx1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m (a1\u001b[38;5;241m/\u001b[39mA1)\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mg\u001b[38;5;241m*\u001b[39mx1)\u001b[38;5;241m+\u001b[39m(a3\u001b[38;5;241m/\u001b[39mA3)\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mg\u001b[38;5;241m*\u001b[39mx3)\u001b[38;5;241m+\u001b[39m(gamma1\u001b[38;5;241m/\u001b[39mA1)\u001b[38;5;241m*\u001b[39mu1\n\u001b[1;32m     10\u001b[0m dx2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m (a2\u001b[38;5;241m/\u001b[39mA2)\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mg\u001b[38;5;241m*\u001b[39mx2)\u001b[38;5;241m+\u001b[39m(a4\u001b[38;5;241m/\u001b[39mA4)\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mg\u001b[38;5;241m*\u001b[39mx4)\u001b[38;5;241m+\u001b[39m(gamma2\u001b[38;5;241m/\u001b[39mA2)\u001b[38;5;241m*\u001b[39mu2\n\u001b[1;32m     11\u001b[0m dx3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m(a3\u001b[38;5;241m/\u001b[39mA3)\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mg\u001b[38;5;241m*\u001b[39mx3)\u001b[38;5;241m+\u001b[39m((\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39mgamma2)\u001b[38;5;241m/\u001b[39mA3)\u001b[38;5;241m*\u001b[39mu2\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x3' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "gamma1 = gamma2 = 0.4\n",
+    "A1 = A2 = 50.27\n",
+    "A3 = A4 = 28.27\n",
+    "a1 = 0.233\n",
+    "a2 = 0.242\n",
+    "a3 = a4 = 9.127\n",
+    "g = 9.8\n",
+    "\n",
+    "dx1 = - (a1/A1)*np.sqrt(2*g*x1)+(a3/A3)*np.sqrt(2*g*x3)+(gamma1/A1)*u1\n",
+    "dx2 = - (a2/A2)*np.sqrt(2*g*x2)+(a4/A4)*np.sqrt(2*g*x4)+(gamma2/A2)*u2\n",
+    "dx3 = -(a3/A3)*np.sqrt(2*g*x3)+((1-gamma2)/A3)*u2\n",
+    "dx4 = -(a4/A4)*np.sqrt(2*g*x4)+((1-gamma1)/A4)*u1\n",
+    "\n",
+    "\n",
+    "Q = [[3,0,0,0], [0,3,0,0], [0,0,0.3,0], [0,0,0,0.3]]"
+   ]
   }
  ],
  "metadata": {
